@@ -24,6 +24,7 @@
 <$parser.satsuki_syntax_h = true>	syntaxハイライトをsatsuki記法に準拠させる
 <$parser.satsuki_seemore  = true>	「続きを読む」記法
 <$parser.satsuki_footnote = true>	(())によるコメント記法
+<$parser.qiita_math       = true>	Qiitaのmathブロック記法
 <$parser.seemore_msg = s.seemore_msg || '続きを読む'>
 
 さつきパーサーのロード
