@@ -10,6 +10,7 @@
 -【記法】ブロック記法を若干改良しました。
 -【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
 -【Markdown】注釈記法を追加しました。
+-【Markdown】[https://qiita.com/Qiita/items/c686397e4a0f4f11683d#%E6%95%B0%E5%BC%8F%E3%81%AE%E6%8C%BF%E5%85%A5:Qiitaのmathブロック記法]を追加しました。
 -【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
 -【httpd/EXE】引数を若干変更しました。
 -【httpd/EXE】adiary.conf.cgiが存在しない時、自動生成するようにしました。
